# RoguelikeCardgame

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  STATUS.md  generate_assets.py
.github/agents/: AGENTS.md
.github/skills/add-card-type/: SKILL.md
.github/skills/add-ui-component/: SKILL.md
.github/skills/create-card/: SKILL.md
.github/skills/create-scene/: SKILL.md
.github/workflows/: ci.yml
assets/cards/: 001_lowly_squire.xml  002_white_knight.xml  003_cleric_of_light.xml  004_avenging_elf.xml  005_stout_defender.xml  006_light_of_justice.xml  007_herald_of_dawn.xml  008_white_mage_apprentice.xml  009_angel_of_justice.xml  010_avatar_of_retribution.xml  011_white_placeholder.xml  012_white_placeholder.xml  013_white_placeholder.xml  014_white_placeholder.xml  015_white_placeholder.xml  016_white_placeholder.xml  017_white_placeholder.xml  018_white_placeholder.xml  019_white_placeholder.xml  020_white_placeholder.xml  021_blue_placeholder.xml  021_merfolk_fledgling.xml  022_blue_knight.xml  022_blue_placeholder.xml  023_blue_placeholder.xml  023_novice_spellshaper.xml  024_blue_placeholder.xml  024_guardian_of_the_wake.xml  025_blue_placeholder.xml  025_illusive_pickpocket.xml  026_aqua_elemental.xml  026_blue_placeholder.xml  027_blue_placeholder.xml  027_herald_of_insight.xml  028_blue_mage_apprentice.xml  028_blue_placeholder.xml  029_blue_placeholder.xml  029_sphinx_of_intellect.xml  030_avatar_of_the_arcane.xml  030_blue_placeholder.xml  (+113 more)
demos/: CMakeLists.txt
demos/battle_test_demo/: main.cpp
demos/card_viewer_demo/: CMakeLists.txt  main.cpp
demos/cardregistrydemo/: CMakeLists.txt  main.cpp
demos/cardrendererdemo/: CMakeLists.txt  main.cpp
demos/handrendererdemo/: CMakeLists.txt  main.cpp
demos/uibuttondemo/: CMakeLists.txt  main.cpp
include/core/: card_data.h  card_instance.h  card_registry.h  character_config.h  constants.h  enums.h  game_config.h  game_state.h
include/core/ai/: battle_ai.h  simple_ai.h
include/core/controllers/: hand_controller.h
include/core/effects/: action.h  common_effects.h  effect.h  effect_registry.h  effect_resolver.h  event_bus.h  game_event.h  rule.h  rule_result.h  rules_engine.h  target.h  target_filter.h  trigger.h  trigger_system.h  visual_blocker.h
include/core/effects/actions/: action_base.h  creature_attack_action.h  deal_damage_action.h  draw_card_action.h  end_turn_action.h  heal_action.h  kill_creature_action.h  modify_stats_action.h  move_to_graveyard_action.h  play_card_action.h  resolve_spell_action.h  start_turn_action.h
include/core/effects/rules/: attack_rule.h  board_space_rule.h  mana_rule.h  targeting_rule.h  turn_rule.h
include/core/effects/types/: damage_effect.h  draw_effect.h  heal_effect.h  stat_modify_effect.h
include/core/graphics/: battle_ui.h  card_renderer.h  hand_renderer.h  health_icon.h  ui_button.h
include/core/state/: game_state.h  player_state.h
include/core/util/: graphics_util.h  math_util.h
include/scenes/: battle_test_scene.h  card_viewer_scene.h  combat_command_system.h  combat_commander.h  combat_scene.h  combat_types.h  effect_demo_scene.h  hand_controller.h  main_menu_scene.h  new_run_scene.h
include/scenes/combat/: attack_animation.h  board_hitbox.h  combat_animator.h  combat_state.h  combat_ui_constants.h  hitbox_manager.h
include/scenes/controllers/: combat_controller.h  hand_controller.h
scripts/: verify_build.sh
src/: main.cpp
src/core/: card_instance.cpp  card_registry.cpp  game_config.cpp
src/core/ai/: simple_ai.cpp
src/core/controllers/: hand_controller.cpp
src/core/effects/: board_space_rule_test.cpp  effect_registry.cpp  event_bus_test.cpp  rules_engine.cpp  rules_engine_test.cpp  target_filter.cpp  target_filter_test.cpp  trigger_system.cpp
src/core/effects/actions/: creature_attack_action.cpp  deal_damage_action.cpp  draw_card_action_test.cpp  end_turn_action.cpp  end_turn_action_test.cpp  heal_action.cpp  kill_creature_action_test.cpp  modify_stats_action.cpp  modify_stats_action_test.cpp  play_card_action_test.cpp  start_turn_action.cpp
src/core/graphics/: battle_ui.cpp  card_renderer.cpp  hand_renderer.cpp  health_icon.cpp  ui_button.cpp
src/core/state/: game_state_test.cpp
src/scenes/: battle_test_scene.cpp  card_viewer_scene.cpp  combat_command_system.cpp  combat_commander.cpp  combat_scene.cpp  combat_scene.h  effect_demo_scene.cpp  hand_controller.cpp  main_menu_scene.cpp  new_run_scene.cpp
src/scenes/combat/: combat_animator.cpp  hitbox_manager.cpp
src/scenes/controllers/: combat_controller.cpp  hand_controller.cpp
src/tests/: deal_damage_action_test.cpp  start_turn_action_test.cpp
tests/: CMakeLists.txt  test_card_data.cpp
